--- a/DentalClinic.css
+++ b/DentalClinic.css
@@ -4,7 +4,7 @@ body{
     padding: 0;
     overflow-y: scroll;
     overflow-x:hidden;
-    /* display: flex; */
+    display: grid;
     /* position: relative; */
 }
 /* .Div {
@@ -17,7 +17,7 @@ body{
     /* background-color: rgb(244, 248, 248); */
     display:block;
     /* border: 1px solid black; */
-    /* position:absolute; */
+    position:absolute;
     width: 100vw;
     height: auto;
     padding-top:7vw;
@@ -29,11 +29,11 @@ body{
     border: 1px solid black;
     margin-left: 30px;
     padding: 7px;
-    background-color: rgb(146, 130, 109);
+    background-color: rgb(150, 114, 114);
       /* Last line of First DivDiv1 CSS Styling Section Done */
 }
 .FirstDiv:hover {
-    background-color: #ffffff;
+    background-color: #533838;
 }
 .DivDiv2 {
     /* background-color: powderblue; */
@@ -55,7 +55,7 @@ body{
 }
 .DivDiv3 {
     /* background-color: rgb(123, 161, 161); */
-    border: 1px solid black;
+    /* border: 1px solid black; */
     /* display: block; */
     /* position: relative; */
     /* for temporary to design the DivDiv4 */
@@ -65,7 +65,7 @@ body{
     /* position: absolute; */
     /* margin-top: 30vh; */
     /* width: 20vw; */
-   border:1px solid black;
+   /* border:1px solid black; */
    text-align: center;
    font-size: 2rem;
 
@@ -113,6 +113,6 @@ body{
     float: left;
     background: orangered;
     /* border: 1px solid black; */
-    margin-left: 2vw;
+    margin-left: 1vw;
     padding:8px;
 }
