--- a/LogInPage.css
+++ b/LogInPage.css
@@ -1,36 +1,31 @@
  body {
      background-color:  #A4B465;
-     
+     /* position: relative; */
+     /* Why the above position disappear the main div? */
 
  }
 
  .main {
      background-color: #626F47;
      position: absolute;
-     /* border: 1px solid black; */
      width: 40%;
      height: 80%;
      margin-left: 30vw;
      margin-top: 10h
      box-shadow: 10px 10px white;
+     /* Why Box-shadow doesn't work? */
  }
 
  img {
      display: inline-block;
-     /* position: absolute; */
      width: 20%;
      height: 25%;
-     /* border: 1px solid black; */
      text-align: center;
      margin-left: 12vw;
-     /* background-color: aliceblue; */
-
 
  }
 
  h2 {
-     /* background-color: powderblue; */
-     /* border: 1px solid black; */
      display: block;
      text-align: center;
      padding-bottom: 4vh;
@@ -42,7 +37,6 @@
  }
 
  .login {
-     /* background-color: burlywood; */
      position: absolute;
      display: block;
      margin-top: 10vh;
@@ -66,9 +60,7 @@
      margin-bottom: 6rem;
      padding:7px 12px;
     margin-top: 0.5rem;
-
-     /* padding: 8px; */
-     border-radius: 12px;
+    border-radius: 12px;
  }
 
  a {
@@ -76,8 +68,6 @@
      text-align: center;
      display: block;
      width: 8rem;
-     /* margin-left: 5vw; */
-     /* border: 1px solid black; */
      text-align: center;
      color: white;
 
