--- a/Navbar.css
+++ b/Navbar.css
@@ -1,27 +1,33 @@
 body {
-    background-color:rgb(148, 171, 101)
+    background-color:rgb(148, 171, 101);
+    margin: 0;
+    padding: 0;
 }
 ul {
-    background-color: rosybrown;
-    overflow: hidden;
+    background-color: rgb(66, 93, 169);
+    overflow: none;
     list-style-type: none;
     width:100%;
     display: flex;
     flex-direction:row;
+    /* margin-left: 5px; */
+    padding-left: 10px;
 }
 li a{
-    display:inline-flex;
-    text-align: center;padding: 18px 26px;
+    display:block;
+    text-align: center;
+    padding: 18px 20px;
     text-decoration: none;
-    /* right: 20px;
-    top: 20px; */
+    color: white;
+   
+   
     
 }
 li a:hover {
-    background-color: antiquewhite;
-    color: black;
+   background-color: rgb(48, 69, 131);
+    color:white
 }
-.active-link {
-    background-color: lightgoldenrodyellow;
-    color: black;
+ .active-link {
+    background-color:rgb(52, 66, 108);
+    color: rgb(231, 231, 231);
 }
