--- a/overlay,.css
+++ b/overlay,.css
@@ -1,3 +1,7 @@
+* {
+    background-color: rgb(216, 225, 232);
+}
+
 .MainContainer {
     background-color: antiquewhite;
     width: 100%;
@@ -5,7 +9,7 @@
     /* display: flex;
     justify-content: center;
     align-items: center; */
-    margin-top: 15em;
+    margin-top: 5em;
     /* padding: 0; */
     z-index: 1;
 }
@@ -69,4 +73,15 @@ img:hover{
     /* background-color: rgba(87, 92, 133, 0.4) */
     
 }
-mar
+h1, h4 {
+    color: black;
+    height: auto;
+    width: 100%;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: aqua;
+    margin-top: 4rem;
+    /* padding: 5px; */
+}
