--- a/FormByCSS.css
+++ b/FormByCSS.css
@@ -1,5 +1,5 @@
 body{
-    background-color: rgb(155, 165, 165);
+    background-color: rgb(224, 226, 226);
 }
 div {
     background-color: antiquewhite;
@@ -7,10 +7,12 @@ div {
     /* display: flex;
     justify-content: center; 
      align-items: center;  */
-    width: 80%;
-    height: 15rem;
-    margin-left: 10%;
-    margin-top: 20%;
+    width: 90%;
+    height: 20rem;
+    margin-left: 5%;
+    margin-top: 10%;
+    border-radius: 10px;
+    box-shadow: 10px 15px 20px rgba(0, 0, 0), 0.5;
 }
 input{
     position: relative;
@@ -19,30 +21,43 @@ input{
     /* background-color: transparent; */
     /* border-bottom: 1px solid black; */
     border: 1px solid black;
-    box-shadow: 2px 5% black;
+    /* box-shadow: 2px 5% black; */
     
  }
 label{
     font-size: 16px;
     color: green;
+    /* display: inline-block; */
+    float: left;
 }
 .Submit{
     padding: 14px 20px;
-    background-color: rgb(12, 106, 12);
+    background-color: rgb(32, 126, 32);
     color: whitesmoke;
     font-size: 14px;
     text-align: center;
+    border-radius: 5px;
+    border: none;
 }
-div>ul>ul>li>{
-    display: block;
+.Submit:hover{
+    background-color:rgb(51, 159, 51) ;
+}
+div>ul>ul>li>a{
+    /* display: block; */
     color: black;
     padding: 10px;
+    margin-top: 10px;
     background-color: whitesmoke;
     text-decoration: none;
     font-family: sans-serif;
     list-style-type:none;
+    width: 200px;
 
 }
 a{
     /* display: none; */
+}
+a:focus{
+    background-color: green;
+    color: white;
 }
