--- a/FormByCSS.css
+++ b/FormByCSS.css
@@ -1,7 +1,7 @@
 body{
     background-color: rgb(224, 226, 226);
 }
-div {
+.MainContainer {
     background-color: antiquewhite;
     position: relative;
     /* display: flex;
@@ -54,9 +54,23 @@ div>ul>ul>li>a{
     width: 200px;
 }
 a{
-    /* display: none; */
+    display: none;
 }
-a:focus{
+a:hover{
     background-color: green;
     color: white;
+}
+.InputName{
+    position: absolute;
+    top: 10px;
+    left: 50px;
+    display: inline-block;
+    padding: 10px;
+}
+.InputLastName{
+    position: absolute;
+    top: 10px;
+    left: 50%;
+    padding: 10px;
+    width: 6rem;
 }
