--- a/FormByCSS.css
+++ b/FormByCSS.css
@@ -4,9 +4,9 @@ body{
 .MainContainer {
     background-color: antiquewhite;
     position: relative;
-    /* display: flex;
+    display: flex;
     justify-content: center; 
-     align-items: center;  */
+     align-items: center; 
     width: 90%;
     height: 20rem;
     margin-left: 5%;
@@ -18,17 +18,21 @@ input{
     position: relative;
     list-style-type: none;
     padding: 10px;
-    /* background-color: transparent; */
-    /* border-bottom: 1px solid black; */
+    background-color: transparent;
+   
     border: 1px solid black;
     /* box-shadow: 2px 5% black; */
     
  }
 label{
     font-size: 16px;
-    color: green;
+    /* color: green; */
     /* display: inline-block; */
     float: left;
+    padding-bottom: 30px;
+    padding-top: 10px;
+    font-size: 18px;
+    
 }
 .Submit{
     padding: 14px 20px;
@@ -38,6 +42,9 @@ label{
     text-align: center;
     border-radius: 5px;
     border: none;
+    position: absolute;
+    bottom: 40px;
+    left: 65px;
 }
 .Submit:hover{
     background-color:rgb(51, 159, 51) ;
@@ -50,7 +57,7 @@ div>ul>ul>li>a{
     background-color: whitesmoke;
     text-decoration: none;
     font-family: sans-serif;
-    list-style-type:none;
+    /* list-style-type:none; */
     width: 200px;
 }
 a{
@@ -60,7 +67,7 @@ a:hover{
     background-color: green;
     color: white;
 }
-.InputName{
+.InputFirstName{
     position: absolute;
     top: 10px;
     left: 50px;
