--- a/FormByCSS.css
+++ b/FormByCSS.css
@@ -49,21 +49,30 @@ label{
 .Submit:hover{
     background-color:rgb(51, 159, 51) ;
 }
-div>ul>ul>li>a{
-    /* display: block; */
+.Dropdown{
+    display: block;
     color: black;
     padding: 10px;
     margin-top: 10px;
     background-color: whitesmoke;
     text-decoration: none;
     font-family: sans-serif;
-    /* list-style-type:none; */
     width: 200px;
+    position: absolute;
+    top: 130px;
+    left: 55px;
+    text-align: left;
 }
-a{
-    display: none;
+.Dropdown li a {
+   
+     width: 300px;
+     padding-top: 20px;
+     /* gap: 5px; */
+     font-size: 16px;
+     height: 100px;
+     text-align: left;
 }
-a:hover{
+ li > a:hover{
     background-color: green;
     color: white;
 }
