--- a/FormByCSS.css
+++ b/FormByCSS.css
@@ -4,9 +4,9 @@ body{
 .MainContainer {
     background-color: antiquewhite;
     position: relative;
-    display: flex;
+    /* display: flex;
     justify-content: center; 
-     align-items: center; 
+     align-items: center;  */
     width: 90%;
     height: 20rem;
     margin-left: 5%;
@@ -15,19 +15,15 @@ body{
     box-shadow: 5px 5px 10px 10px rgba(0, 0, 0, 0.2);
 }
 input{
-    position: relative;
-    list-style-type: none;
+    position: inline-block;
     padding: 10px;
     background-color: transparent;
-   
-    border: 1px solid black;
+    border:1px solid black;
+    /* outline: none; */
     /* box-shadow: 2px 5% black; */
     
  }
 label{
-    font-size: 16px;
-    /* color: green; */
-    /* display: inline-block; */
     float: left;
     padding-bottom: 30px;
     padding-top: 10px;
@@ -63,9 +59,9 @@ label{
     left: 55px;
     text-align: left;
 }
-.Dropdown li a {
-   
-     width: 300px;
+ ul li a {
+     color:black;
+     
      padding-top: 20px;
      /* gap: 5px; */
      font-size: 16px;
