--- a/FormByCSS.css
+++ b/FormByCSS.css
@@ -1,5 +1,5 @@
 body{
-    background-color: antiquewhite;
+    background-color: rgb(249, 244, 238);
     text-align: center;
     
 }
@@ -7,11 +7,11 @@ body{
      text-align: center;
      position: absolute;
      top: 5%;
-     left: 22vw;
-     right: 22vw;
+     left: 20vw;
+     right: 20vw;
 }
 .MainContainer {
-    background-color: antiquewhite;
+    background-color: rgb(251, 246, 240);
     position: relative;
     /* display: flex;
     justify-content: center; 
@@ -40,11 +40,9 @@ label{
     padding-bottom: 30px;
     padding-top: 10px;
     font-size: 18px;
-    
-    
 }
 .Submit{
-    padding: 14px 20px;
+    padding: 14px 16px;
     background-color: rgb(32, 126, 32);
     color: whitesmoke;
     font-size: 14px;
@@ -109,3 +107,7 @@ label{
     padding: 10px;
     width: 6rem;
 }
+
+
+/* How to add only one line for input type?
+how to add Dropdown? */
