--- a/LoaderRecoding.css
+++ b/LoaderRecoding.css
@@ -1,7 +1,7 @@
 
 
 .Container{
-    display: flex;
+    position: relative; 
     height: 200px;
     width: 95%;
     background-color: antiquewhite;
@@ -10,8 +10,9 @@
     margin-left: 2.5vw;
     margin-top: 7vh;
     border-radius: 8px;
-    justify-content: center;
-    align-items: center;
+    /* justify-content: center;
+    align-items: center; */
+
 
 }
 h1{
@@ -31,6 +32,15 @@ h1{
     border-top: 8px solid blueviolet;
     border-radius: 50%;
     animation: circleLoader 2s ease infinite;
+    position: absolute;
+    top: 8vh;
+    left: 45vw;
+    
+    
+}
+.loader:hover, h1:hover{
+    scale: 1.1;
+    
 }
 @keyframes circleLoader {
     0% {
