--- a/LoaderRecoding.css
+++ b/LoaderRecoding.css
@@ -1,7 +1,8 @@
 
 
 .Container{
-    position: relative; 
+    /* position: relative;  */
+    display: flex;
     height: 200px;
     width: 95%;
     background-color: antiquewhite;
@@ -10,8 +11,8 @@
     margin-left: 2.5vw;
     margin-top: 7vh;
     border-radius: 8px;
-    /* justify-content: center;
-    align-items: center; */
+    justify-content: center;
+    align-items: center;
 
 
 }
@@ -29,12 +30,13 @@ h1{
     width: 50px;
     height: 50px;
     border: 8px solid green;
-    border-top: 8px solid blueviolet;
+    border-top: 8px solid rgb(255, 255, 255);
+    border-bottom: 8px solid white;
     border-radius: 50%;
     animation: circleLoader 2s ease infinite;
-    position: absolute;
+    /* position: absolute;
     top: 8vh;
-    left: 45vw;
+    left: 45vw; */
     
     
 }
@@ -49,5 +51,64 @@ h1{
     100%
     {
         transform: rotate(360deg);
+    }
+}
+.MainContainer{
+    height: 200px;
+    width: 95%;
+    border: 1px solid rgb(180, 189, 164);
+    border-radius: 5px;
+    margin-left: 2.5vw;
+    display: flex;
+    background-color: antiquewhite;
+    justify-content: space-around;
+    align-items: center;
+}
+/* .ChildContainer{
+    width: 150px;
+    height: 80px;
+    background-color: aquamarine;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+} */
+.ChildContainer div{
+    border: 1px solid;
+    border-color: aliceblue;
+    background-color: blueviolet;
+    height: 12px;
+    width: 12px;
+    display: inline-block;
+    border-radius: 50%;
+    animation: DotsLoader 1.5s ease infinite;
+}
+.ChildContainer div:nth-child(1){
+    animation-delay: -0.6s;
+}
+.ChildContainer div:nth-child(2){
+    animation-delay: -0.5s;
+}
+.ChildContainer div:nth-child(3){
+    animation-delay: -0.4s;
+}
+.ChildContainer div:nth-child(4){
+    animation-delay: -0.3s;
+}
+.ChildContainer div:nth-child(5){
+    animation-delay: -0.2s;
+}
+.ChildContainer div:nth-child(6){
+    animation-delay: -0.1s;
+}
+@keyframes DotsLoader {
+    0%, 100%{
+        transform: scale(1.2);
+        opacity: 1;
+    }
+    50% 
+    {
+        transform: scale(0.5);
+        opacity: 0.3;
     }
 }
