--- a/LoaderRecoding.css
+++ b/LoaderRecoding.css
@@ -2,6 +2,7 @@
 body{
     overflow-y: scroll;
 }
+                /* Single Circle Loader Section */
 .Container{
     /* position: relative;  */
     display: flex;
@@ -55,6 +56,9 @@ h1{
         transform: rotate(360deg);
     }
 }
+
+                /* Dots CSS Style Sections */
+
 .MainContainer{
     height: 200px;
     width: 95%;
@@ -117,7 +121,8 @@ h1{
     }
 }
 
-        /* three type of loader */
+        /* Below are three type of loader CSS Styles  */
+
 .MainDiv{
     border: 1px solid rgb(187, 187, 201);
     height: 200px;
@@ -159,5 +164,31 @@ h1{
     100% {
         transform: rotate(360deg);
     }
-   
+}
+
+.MainGradientColor{
+    border: 1px solid rgba(128, 128, 128, 0.475);
+    width: 90%;
+    height: 200px;
+    border-radius: 5px;
+    box-shadow: 5px 4px 6px rgba(0, 0, 0, 0.3);
+    background-color: rgba(255, 248, 220, 0.344);
+    margin-left: 5vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.ChildGradientColor{
+    border: 10px solid black;
+    border-radius: 50%;
+    height: 50px;
+    width: 50px;
+    background: linear-gradient(180deg green, purple);
+    mask: conic-gradient(#934646, rgb(74, 74, 197)), linear-gradient(#fee000, 0, 0) content-box;
+    animation: GradientLoader 2s linear infinite;
+}
+@keyframes GradientLoader{
+    to{
+        transform: rotate(1turn);
+    }
 }
