--- a/LoaderRecoding.css
+++ b/LoaderRecoding.css
@@ -2,7 +2,7 @@
 body{
     overflow-y: scroll;
 }
-                /* Single Circle Loader Section */
+                /* CSS Single and Simple Loader Section */
 .Container{
     /* position: relative;  */
     display: flex;
@@ -57,7 +57,7 @@ h1{
     }
 }
 
-                /* Dots CSS Style Sections */
+                /* CSS Dots Loader Section */
 
 .MainContainer{
     height: 200px;
@@ -121,7 +121,7 @@ h1{
     }
 }
 
-        /* Below are three type of loader CSS Styles  */
+        /* CSS Three Styles Loader */
 
 .MainDiv{
     border: 1px solid rgb(187, 187, 201);
@@ -165,7 +165,7 @@ h1{
         transform: rotate(360deg);
     }
 }
-
+                        /*CSS Gradient Color Section */
 .MainGradientColor{
     border: 1px solid rgba(128, 128, 128, 0.475);
     width: 90%;
@@ -174,6 +174,7 @@ h1{
     box-shadow: 5px 4px 6px rgba(0, 0, 0, 0.3);
     background-color: rgba(255, 248, 220, 0.344);
     margin-left: 5vw;
+    margin-top: 5vh;
     display: flex;
     justify-content: center;
     align-items: center;
