designing the elements

--- a/BoxModel.css
+++ b/BoxModel.css
@@ -3,33 +3,43 @@
     background-color: antiquewhite;
 }
 .BoxModel{
-    background-color: azure;
-    width: 100%;
+    background-color: rgb(225, 231, 231);
+    width: 90%;
     height: 600px;
     border: 1px solid black;
-    margin-top:10vh;
+    margin:5vw;
+    border-top-left-radius: 40px;
+    border-bottom-right-radius: 40px;
+    
 }
 .ContentBox{
     border: 1px solid black;
     border-radius: 5px;
-    width: 500px;
-    /* height: 200px; */
-    margin-left: 7vw;
+    width: 70vw;
+    height: 25vh;
+    margin-left: 6vw;
     margin-top: 5vh;
     text-align: left;
-    vertical-align: center;
-    /* padding-top: 5vh;
-    padding-bottom: 5vh; */
-    box-sizing: content-box;
+    padding:25px;
+    box-sizing: content-box;  
+                                                         /* Usage of Box-sizing:Conten-box*/
     background-color: rgb(216, 229, 229);
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
     font-style: italic;
 
 }
-.ContentBox{
-    padding: 25px;
-}
 .BorderBox{
     border: 1px solid black;
+    width: 70vw;
+    height: 25vh;
+    margin-left: 8vw;
+    padding: 25px;
+    margin-top: 5vh;
+    border-radius: 5px;
+    background-color: blanchedalmond;
+    box-shadow: 6px 6px 10px rgba(0, 0, 0, 0.6);
+    font-family:'Times New Roman', Times, serif;
+    box-sizing: border-box;
+
     
 }
