--- a/BoxModel.css
+++ b/BoxModel.css
@@ -1,5 +1,7 @@
-
-*body{
+*{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+body{
     background-color: antiquewhite;
 }
 .BoxModel{
@@ -12,6 +14,8 @@
     border-bottom-right-radius: 40px;
     
 }
+
+                                                         /* Usage of Box-sizing:Conten-box*/
 .ContentBox{
     border: 2px solid black;
     border-radius: 5px;
@@ -22,7 +26,6 @@
     text-align: left;
     padding:25px;
     box-sizing: content-box;  
-                                                         /* Usage of Box-sizing:Conten-box*/
     background-color: rgb(216, 229, 229);
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
     font-style: italic;
@@ -31,6 +34,8 @@
 .Content_Box{
     text-align: center;
 }
+                         /*The Usage of box-sizing:border-box */
+    
 .BorderBox{
     border: 2px solid black;
     width: 70vw;
@@ -43,6 +48,5 @@
     box-shadow: 6px 6px 10px rgba(0, 0, 0, 0.6);
     font-family:'Times New Roman', Times, serif;
     box-sizing: border-box;
-                                /*The Usage of box-sizing:border-box */
-    
+                               
 }
