--- a/CSSAttrSelectors.css
+++ b/CSSAttrSelectors.css
@@ -1,18 +1,47 @@
 
 .MainContainer{
     background-color: rgba(107, 151, 181, 0.2);
-    width: 98%;
-    height: 60vh;
+    width: 100%;
+    height: 100vh;
     border-radius: 10px;
-    display: flex;
+    /* display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
+    position: relative;
     border: 2px solid green;
 }
 .Shortcuts{
-    border: 2px solid black;
-    width: 90%;
-    height: 200px;
-
+    border: 1.5px solid black;
+    width: 100%;
+    height: 35vh;
+    background-color: whitesmoke;
+    margin: 2vw;
+    /* border-radius: 5px; */
+    position: relative;
+}
+.First{
+    position: absolute;
+    top: 1vh;
+    left: 0vw;
+    width: 55vw;
+    height: 20vh;
+    border-top-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+}
+.Second{
+    position: absolute;
+    top: 22vh;
+    left: 31vw;
+    width: 60vw;
+    border-top-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    
+}
+.Third{
+    position: absolute;
+    top: 510px;
+    left: 0px;
+    border-top-right-radius: 20px;
+    border-bottom-left-radius: 20px;
 }
 
