--- a/CSSAttrSelectors.css
+++ b/CSSAttrSelectors.css
@@ -1,3 +1,5 @@
+
+
 *, *::before, *::after{
     box-sizing:border-box;
     overflow: scroll;
@@ -17,7 +19,7 @@ body{
 }
 
 .MainContainer{
-    background-color: rgba(107, 151, 181, 0.2);
+    background-color:whitesmoke;
     width: 100%;
     height: 100vh;
     border-radius: 10px;
@@ -29,7 +31,8 @@ body{
 }
 h1{
     text-align: center;
-
+    text-shadow: 4px 4px 7px rgba(0, 0, 0, 0.4);
+    /* text-shadow: linear-gradient(45deg, red, green, blue); */
 }
  .Shortcuts{
     border: 1px solid black;
@@ -53,11 +56,13 @@ h1{
     border-bottom-right-radius: 20px;
     border-top-right-radius: 20px;
     font-family: var(--font-family);
+    
 }
 h3{
     position: absolute;
     top: 32.5vh; 
     right: 5vw;
+     text-shadow: 4px 4px 7px rgba(0, 0, 0, 0.4);
 }
 .Second {
     position: absolute;
@@ -77,6 +82,7 @@ h3{
     position: absolute;
     top:61.5vh ;
     left: 10vw;
+     text-shadow: 4px 4px 7px rgba(0, 0, 0, 0.4);
 }
 .Third {
     position: absolute;
