--- a/UniLandingPage.css
+++ b/UniLandingPage.css
@@ -4,28 +4,61 @@
     box-sizing: border-box;
 }
 body{
-    background-color: azure;
+    background-color: rgb(199, 224, 224);
 }
 .mainContainer{
-    border: 1px solid black;
-    height: 700px;
-    width: 100%;
+    border: 1px solid rgb(199, 194, 194);
+    width: 80.2vw;
+    height: 70.2h; 
+    margin-left: 10vw;
                             /*Which one is better in this situation, either add img through CSS or HTMl?*/
     /* background-image: url("UniLandingPageImage/TopMainImage.jpeg"); */
     /* background-repeat: no-repeat; */
-    margin-top: 2em;
-    border-radius: 5px;
+    /* margin-top: 2em; */
+    /* border-radius: 5px; */
 
 }
 .mainContainer  img{
-    width: 400px;
-    height: 700px;
+   
                             /*Why the display:flex; doesn't work here?*/
     /* display: flex;
     justify-content: center;
     align-items: center; */
     position: relative;
-    left: 4rem;
-    width: 90%;
-    border: 5px;
+    width: 80vw;
+    height: 70vh; 
+    /* margin-left: 10vw; */
+    
+} 
+.firstDiv h1 {
+    color: rgb(255, 255, 255);
+    font-size: 50px;
+    text-align: center;
+    position: absolute;
+    top: 25%;
+    left: 20vw;
+    /* transform: translate(50, 0); */
+}
+.firstDiv h2{
+    color: white;
+    outline: 1px solid black;
+    position: absolute;
+    top: 100px;
+    left: 300px;
+    margin-top: 35vh;
+}
+.firstDiv p {
+    border: 1px solid black;
+    height: 60px;
+    width: 150px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 20px;
+    /* position: absolute; */
+    top: 300px;
+    left: 300px;
+    border: 2px solid green;
+    z-index: 999;
+    background-color: blanchedalmond;
 }
