--- a/LastLandingPage.css
+++ b/LastLandingPage.css
@@ -524,26 +524,26 @@ body {
     display: grid;
     grid-template-columns: repeat(2,1fr);
 }
-.lastSection h1{
+.lastSection div div{
+    background-color: gray;
+    border: 1px solid red;
+    border-radius: 20px;
+    position: relative;
+    top: -200px;
+    left: 50px;
+    width: 100%;
+    height: 100px;
+}
+.lastSection div h1{
     color: white;
-    width: 100%;
-    border: 1px solid white;
+    font-size: 35px;
+    padding-left: 10px;
 }
-.lastSection p{
-    color: white;
-    width: 100%;
-    border: 1px solid white;
-    font-size: 20px;
+.lastSection div div img{
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    color: transparent;
+}
 
-}
-.lastSection div form{
-    width: 100%;
-    height: 300px;
-    background-color: bisque;
-
-}
-.lastSection div form input[type="text"]{
-    padding: 10px;
-    width: 90%;
-}
 
