--- a/Protifolio/Portifolio.css
+++ b/Protifolio/Portifolio.css
@@ -19,6 +19,42 @@ body{
     background-color: rgba(0, 0, 0, 0.8);
 
 }
-.Sections .Section1{
-    div   
+.Sections .Section1 #leftSpan{
+    color: rgb(212, 207, 207);
+    background-color: rgba(0, 0, 0, 0.23);
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    border-radius: 7px;
+    font-size: 30px;
+    position: relative;
+    top: 55px;
+    left: 200px;
+    /* border: 1px solid white; */
+    
+}
+.Sections .Section1 nav{
+    /* background-color: gray; */
+    width: 80%;
+    padding: 15px;
+    text-align: right;
+    margin-left: 20%;
+    margin-top: 10px;
+    
+}
+.Sections .Section1 nav #rightSpan:nth-child(6){
+    color:rgb(212, 207, 207);
+    padding-left: 50px;
+    padding-right: 50px;
+   
+}
+.Sections .Section1 nav a{
+    color: rgb(212, 207, 207);
+    list-style: none;
+    text-decoration: none;
+    padding: 15px;
+    font-size: 50;
+    font-weight: thin;
+    
 }
