--- a/Protifolio/Portifolio.css
+++ b/Protifolio/Portifolio.css
@@ -12,10 +12,11 @@ body{
     border: 1px solid black;
     margin-left: 5%;
     margin-top: 5%;
+    overflow: hidden;
 }
 .Sections .Section1{
     width: 100%;
-    height: 650px;
+    height: 680px;
     background-color: rgba(0, 0, 0, 0.8);
 
 }
@@ -58,7 +59,7 @@ body{
     font-size: 50;
     font-weight: thin;
 }
-.Sections .Section1 > div h4, h1, p{
+.Sections .Section1 > div h4, h1{
     display: grid;
     grid-template-columns: repeat(2,1fr);
     text-align: left;
@@ -68,6 +69,7 @@ body{
 }
 .Sections .Section1 > div h4{
     font-size: 20px;
+    letter-spacing: 4px;
     color: rgb(182, 125, 19);
     font-weight: thin;
 }    
@@ -76,9 +78,42 @@ body{
     font-size: 50px; 
     margin-top: -2px;  
 }
-.Sections .Section1 > div h1, p{
+.Sections .Section1 > div p{
+    width: 45%;
+    /* border: 1px solid white; */
     color:rgba(250, 250, 250, 0.7);
     line-height: 24px;
     text-align: left;
     font-weight: 100;
+    position:relative;
+    top: 80px;
+    left: 100px;
+    font-size: 19px;
+
+}
+/*addressing by descending selectors/nesting selectors and attr selectors*/
+.Sections .Section1  input[type="submit"]{
+    color:orange;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    border-radius: 50px;
+    background-color: transparent;
+    font-size: 16px;
+    position: relative;
+    top: 110px;
+    left: 100px;
+    border: 1px solid orange;
+}
+.Sections .Section1 img{
+    width: 38vw;
+    height: 60vh;
+    /* width: 500px;
+    height: 500px; */
+    border-radius: 5px;
+    position: relative;
+    left: 750px;
+    top: -310px;
+    opacity: 0.9;
 }
