--- a/Protifolio/Portifolio.css
+++ b/Protifolio/Portifolio.css
@@ -8,7 +8,7 @@ body{
 .Sections{
     background-color: lightgray;
     width: 90%;
-    height: 1000px;
+    /* height: 1000px; */
     border: 1px solid black;
     margin-left: 5%;
     margin-top: 5%;
@@ -116,4 +116,59 @@ body{
     left: 750px;
     top: -310px;
     opacity: 0.9;
+}
+
+/*Second Section*/
+.Section2{
+    background-color: rgba(0, 0, 0, 0.6);
+    width: 100%;
+    height: 700px;
+    /* border: 1px solid white; */
+    /* display: grid;
+    grid-template-columns: repeat(2,1fr); */
+}
+.Section2 img{
+    position: relative;
+    top: 80px;
+    left: 300px;
+    border-radius: 5px;
+}
+.Section2 > .imageFirst img{
+    position: relative;
+    width: 380px;
+    height: 480px;
+}
+.Section2 > .imageSecond img{
+    position: relative;
+    top: -190px;
+    left: 160px;
+    width:280px;
+    height: 330px;
+    
+}
+.Section2 > div h1, p{
+    position: relative;
+    top: -700px;
+    left: 800px;
+    width: 500px;
+    direction: ltr;
+    /* border: 1px solid black; */
+}
+.Section2 > div h1{
+    position: relative;
+    width: 400px;
+    left: 650px;
+    color: rgba(255, 255, 255, 0.9);
+    font-size: 35px;
+    font-weight: bold;
+
+}
+.Section2 > div p{
+    position: relative;
+    left: 750px;
+    width: 480px;
+    height: 400px;
+    line-height: 20px;
+    color: rgba(255, 255, 255, 0.7);
+
 }
