--- a/Protifolio/Portifolio.css
+++ b/Protifolio/Portifolio.css
@@ -172,3 +172,22 @@ body{
     color: rgba(255, 255, 255, 0.7);
 
 }
+/*third Section Designing*/
+.Section3{
+    border: 1px solid green;
+    width: 100%;
+    height: 700px;
+    background-color: rgba(0, 0, 0, 0.6);
+}
+.Section3 .Selfie .Selfie{
+     background-color: rgba(0, 0, 0, 0.4);
+    width: 80%;
+    height: 180px;
+    margin-left: 10%;
+    border-radius: 5px;
+}
+.Section3 .Image1 img{
+    width: 280px;
+    height: 360px;
+    border-radius: 5px;
+}
