--- a/Protifolio/Portifolio.css
+++ b/Protifolio/Portifolio.css
@@ -176,18 +176,48 @@ body{
 .Section3{
     border: 1px solid green;
     width: 100%;
-    height: 700px;
+    height: 900px;
     background-color: rgba(0, 0, 0, 0.6);
 }
-.Section3 .Selfie .Selfie{
+.Section3 .Selfie{
      background-color: rgba(0, 0, 0, 0.4);
     width: 80%;
-    height: 180px;
+    height: 360px;
     margin-left: 10%;
     border-radius: 5px;
+    margin-bottom: 40px;
+    
 }
 .Section3 .Image1 img{
     width: 280px;
     height: 360px;
     border-radius: 5px;
+    /* float: left; */
+}
+.Section3 h1{
+    color: white;
+    position: relative;
+    top: -50px;
+    left: 500px;
+
+}
+.Section3 div h2{
+    color: orange;
+    position: relative;
+    top: -330px;
+    left:350px ;
+    font-size:28px;
+}
+.Section3 div p{
+    position: relative;
+    top: -250px;
+    left:350px;
+}
+.Section3 .Image2 img{
+    width: 290px;
+    height:360px;
+    position: relative;
+    left: 750px;
+    border-radius: 5px;
+    /* float: right; */
 }
