--- a/Protifolio/Portifolio.css
+++ b/Protifolio/Portifolio.css
@@ -174,10 +174,11 @@ body{
 }
 /*third Section Designing*/
 .Section3{
-    border: 1px solid green;
+    border: 1px solid transparent;
     width: 100%;
     height: 900px;
     background-color: rgba(0, 0, 0, 0.6);
+    padding-top: 10px;
 }
 .Section3 .Selfie{
      background-color: rgba(0, 0, 0, 0.4);
@@ -193,6 +194,7 @@ body{
     height: 360px;
     border-radius: 5px;
     /* float: left; */
+    opacity: 0.9;
 }
 .Section3 h1{
     color: white;
@@ -210,14 +212,51 @@ body{
 }
 .Section3 div p{
     position: relative;
-    top: -250px;
+    top: -300px;
     left:350px;
+    color: rgba(255, 255, 255, 0.8);
+    line-height: 25px;
 }
 .Section3 .Image2 img{
-    width: 290px;
+    width: 280px;
     height:360px;
     position: relative;
-    left: 750px;
+    left: 755px;
     border-radius: 5px;
     /* float: right; */
+    opacity: 0.85;
 }
+.Section3 .Image2 p{
+    color: rgba(255, 255, 255, 0.8);
+    position: relative;
+    left: 60px;
+    top: -320px;
+    line-height: 25px;
+}
+.Section3 .Image2 a {
+    color: rgba(255, 255, 255, 0.8);
+    position: relative;
+    top: -220px;
+    left: 60px;
+    font-size: 16px;
+    /* padding: 10px; */
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-right: 15px;
+    padding-left: 15px;
+    width: 20px;
+    height: 20px;
+    background-color: gray;
+    border-radius: 20%;
+    text-decoration: none;
+}
+.Section3 .Image2 h4{
+    position: relative;
+    top: -260px;
+    left: 350px;
+    color: rgba(255, 255, 255, 0.8);
+    font-weight: 100;
+    font-size: 18px;
+}
+/*fourth Section Desigining*/
+
