--- a/Protifolio/Portifolio.css
+++ b/Protifolio/Portifolio.css
@@ -176,7 +176,7 @@ body{
 .Section3{
     border: 1px solid transparent;
     width: 100%;
-    height: 900px;
+    height: 1000px;
     background-color: rgba(0, 0, 0, 0.6);
     padding-top: 10px;
 }
@@ -259,4 +259,75 @@ body{
     font-size: 18px;
 }
 /*fourth Section Desigining*/
+.Section4{
+    width: 100%;
+    height: 1600px;
+    /* border: 1px solid red; */
+    background-color: rgba(0, 0, 0, 0.6);
+    padding-top: 15px;
+    overflow: hidden;
+    
+}
+.Section4 h1{
+    color: white;
+    position: relative;
+    top: -10px;
+    left: 30px;
+    font-size: 35px;
+}
+.Section4 div{
+    /* background-color: gray; */
+    padding: 0px;
+}
+.Section4 div a{
+    color: white;
+    padding: 25px;
+    text-decoration: none;
+    /* background-color:brown; */
+    font-size: 14px;
+    position: relative;
+    top: -70px;
+    left: 700px;
+}
 
+.Section4 h5{
+    color: rgba(62, 19, 19, 1);
+    width: 80%;
+    margin-left: 10%;
+    font-weight: bolder;
+    text-shadow: -0.5px 5px 10px rgba(255, 255, 255, 1);
+    position: relative;
+    top: -80px;
+    text-align: center;
+}
+.Section4 .Documents{
+    width: 80%;
+    margin-left: 10%;
+    gap: 20px;
+    /* border: 1px solid white; */
+    display: grid;
+    grid-template-columns: repeat(4,.1fr);
+    position: relative;
+    top: -50px;
+    
+}
+
+ .Section4 div [src*="IMG"]{ /*Addressing by ATTr Selectors*/
+    width: 238px;
+    height: 300px;
+    margin-left: 10%;
+}
+.Section4 #loadMore4thSec{
+    color: white;
+    text-decoration: none;
+    background-color: rgb(188, 128, 138);
+    padding-top: 12px;
+    padding-bottom:12px ;
+    padding-left:30px ;
+    padding-right:30px ;
+    border-radius: 30px;
+    position: relative;
+    left: 45%;
+    font-weight: thin;
+
+}
