designing last page

--- a/Protifolio/Portifolio.css
+++ b/Protifolio/Portifolio.css
@@ -331,3 +331,9 @@ body{
     font-weight: thin;
 
 }
+/*Fifth Section*/
+.Section5 {
+    width: 100%;
+    height: 800px;
+    background-color: rgba(0, 0, 0, 0.6);
+}
