--- a/Protifolio/Portifolio.css
+++ b/Protifolio/Portifolio.css
@@ -331,9 +331,73 @@ body{
     font-weight: thin;
 
 }
-/*Fifth Section*/
-.Section5 {
+.Section5{
+    background-color: rgba(0, 0, 0, 0.6);
     width: 100%;
     height: 800px;
-    background-color: rgba(0, 0, 0, 0.6);
+}
+.Section5 .lastMainDiv{
+    background-color: gray;
+    width: 80%;
+    height: 500px;
+    margin-left: 10%;
+    display: grid;
+    grid-template-columns: repeat(2, .1fr);
+    padding-left: 10px;
+}
+.Section5 .lastMainDiv h1{
+    color: white;
+    font-size: 38px;
+    font-weight: bolder;
+    border: 1px solid green;
+    position: relative;
+    top:3px;
+    left: -50px;
+    border: 1px solid black;
+    height: 50px;
+}
+.Section5 .lastMainDiv input[type*="tel"], input[type*="email"]{
+    position: relative;
+    top: 34px;
+    left: -200px;
+    padding: 10px;
+    font-size: 15px;
+    letter-spacing: 3px;
+    border: none;
+    width: 250px;
+    background-color: gray;
+    color: white;
+    text-align: left;
+    border: 1px solid black;
+}
+.Section5 .lastMainDiv input[type*="email"]{
+    position: relative;
+    left: 30px;
+    top: -5px;
+    font-size: 15px;
+    width: 300px;
+    text-align: left;
+    border: 1px solid black;
+}
+.Section5 .lastMainDiv form input[type="text"], input[type="email"]{
+    margin-left: 50px;
+    padding: 10px;
+    width: 250px;
+    border-radius: 5px;
+}
+.Section5 .lastMainDiv form input[type="email"]{
+    background-color: white;
+    position: relative;
+    top: -40px;
+    left: 270px;
+     width: 250px;
+}
+.Section5 .lastMainDiv form #purposalReq{
+    width: 520px;
+    position: relative;
+    top: -20px;
+}
+.Section5 .lastMainDiv form #textArea{
+    width: 520px;
+    height: 400px;
 }
