--- a/Protifolio/Portifolio.css
+++ b/Protifolio/Portifolio.css
@@ -391,13 +391,47 @@ body{
     top: -40px;
     left: 270px;
      width: 250px;
+     
 }
 .Section5 .lastMainDiv form #purposalReq{
     width: 520px;
     position: relative;
     top: -20px;
 }
-.Section5 .lastMainDiv form #textArea{
+/*aligning the placeholder value on top right of message box*/
+.Section5 .lastMainDiv form #Message{
     width: 520px;
-    height: 400px;
+    padding-bottom: 200px;
+    /* height: 200px; */
+    text-align: left;
+    
+}
+
+.Section5 .lastMainDiv form p {
+    color: white;
+    position: relative;
+    top: 0px;
+    left: 320px;
+    font-size: 18px;
+}
+/*flaw on changing the size and color of checkbox*/
+.Section5 .lastMainDiv form p input[type*="checkbox"] {
+    font-size: 12px;
+    user-select: contain;
+    -webkit-accent-color: green;
+    accent-color: green;
+}
+.Section5 .lastMainDiv form input[type*="submit"] {
+    color: white;
+    background-color: rgb(180, 99, 99);
+    padding-top: 12px;
+    padding-bottom:12px;
+    padding-left:30px;
+    padding-right:30px;
+    border: none;
+    border-radius: 7px;
+    font-size: 16px;
+    position: relative;
+    top: -50px;
+    left: 475px;
 }
