--- a/Protifolio/Portifolio.css
+++ b/Protifolio/Portifolio.css
@@ -334,7 +334,7 @@ body{
 .Section5{
     background-color: rgba(0, 0, 0, 0.6);
     width: 100%;
-    height: 800px;
+    height: 820px;
 }
 .Section5 .lastMainDiv{
     background-color: gray;
@@ -349,54 +349,70 @@ body{
     color: white;
     font-size: 38px;
     font-weight: bolder;
-    border: 1px solid green;
     position: relative;
     top:3px;
     left: -50px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     height: 50px;
 }
-.Section5 .lastMainDiv input[type*="tel"], input[type*="email"]{
+/*later add the phone and email icon */
+.Section5 .lastMainDiv input[type*="tel"]{
     position: relative;
     top: 34px;
-    left: -200px;
+    left: -230px;
     padding: 10px;
     font-size: 15px;
-    letter-spacing: 3px;
     border: none;
     width: 250px;
     background-color: gray;
     color: white;
     text-align: left;
-    border: 1px solid black;
+    /* border: 1px solid black; */
+    
 }
+.Section5 .lastMainDiv div input[type*="email"]{
+    background-color: transparent;
+    position: relative;
+    left: -90px;
+    color: white;
+}
+
 .Section5 .lastMainDiv input[type*="email"]{
     position: relative;
-    left: 30px;
+    left: -50px;
     top: -5px;
     font-size: 15px;
     width: 300px;
     text-align: left;
-    border: 1px solid black;
+    /* border: 1px solid black; */
+    border: none;
 }
 .Section5 .lastMainDiv form input[type="text"], input[type="email"]{
     margin-left: 50px;
     padding: 10px;
     width: 250px;
     border-radius: 5px;
+    background-color: rgba(0, 0, 0, 0.6);
+    border: none;
+    color: white;
+    
 }
 .Section5 .lastMainDiv form input[type="email"]{
     background-color: white;
     position: relative;
-    top: -40px;
+    top: -37px;
     left: 270px;
      width: 250px;
+     background-color: rgba(0, 0, 0, 0.6);
+     border: none;
      
 }
 .Section5 .lastMainDiv form #purposalReq{
     width: 520px;
     position: relative;
     top: -20px;
+    border: none;
+
 }
 /*aligning the placeholder value on top right of message box*/
 .Section5 .lastMainDiv form #Message{
@@ -408,7 +424,7 @@ body{
 }
 
 .Section5 .lastMainDiv form p {
-    color: white;
+    color: rgba(255, 255, 255, 0.8);
     position: relative;
     top: 0px;
     left: 320px;
@@ -416,10 +432,13 @@ body{
 }
 /*flaw on changing the size and color of checkbox*/
 .Section5 .lastMainDiv form p input[type*="checkbox"] {
-    font-size: 12px;
+    width: 15px;
+    height: 15px;
+    font-size: 15px;
     user-select: contain;
     -webkit-accent-color: green;
     accent-color: green;
+    background-color: transparent; /*how to change the background color of checkbox?*/
 }
 .Section5 .lastMainDiv form input[type*="submit"] {
     color: white;
@@ -434,4 +453,14 @@ body{
     position: relative;
     top: -50px;
     left: 475px;
+}
+.Section5 .lastMainDiv form input[type*="url"] {
+    position: relative;
+    top: -415px;
+    left: 500px;
+    width: 350px;
+    padding-bottom: 325px;
+    background-color:rgba(0, 0, 0, 0.6);
+    border: none;
+    border-radius: 2px;
 }
